kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testcloud-service
spec:
  selector:
    app: testcloud
  ports:
    - port: 8080
